# r-aizawa-mcp

./: .mcp.json  Cargo.toml  flake.nix
src/: main.rs
