[package]
name = "r-aizawa-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
rmcp = { version = "1.2", features = ["server", "transport-io"] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
invalid_reference_casting = "deny"

[lints.clippy]
mod_module_files = "warn"
excessive_precision = "warn"
impl_trait_in_params = "warn"
float_cmp = "warn"
redundant_field_names = "warn"
